--- a/test-output/LoggerReport/dashboard.html
+++ b/test-output/LoggerReport/dashboard.html
@@ -46,6 +46,14 @@
 							</a>
 						</li>
 						<li>
+							<a href="exception.html">
+							<span class="nav-icon">
+							<i class="fa fa-warning"></i>
+							</span>
+							<span class="nav-text">Exceptions</span>
+							</a>
+						</li>
+						<li>
 							<a href="dashboard.html">
 							<span class="nav-icon">
 							<i class="fa fa-dashboard"></i>
@@ -82,7 +90,7 @@
 							<div class="navbar-text nav-title flex" id="pageTitle">Dashboard</div>
 							<ul class="nav nav-xs flex-row no-border pull-right">
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">Jan 20, 2022 06:49:42 PM</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">Feb 7, 2022 04:00:21 PM</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 							</ul>
 						</div>
@@ -99,8 +107,8 @@
 						1
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 1 passed</span>
-						<span><i class="fa fa-circle-o text-success"></i> 100.00%</span>
+						<span class="flex text-muted">Out of which 0 passed</span>
+						<span><i class="fa fa-circle-o text-success"></i> .00%</span>
 					</div>
 				</div>
 			</div>
@@ -113,8 +121,8 @@
 						3
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 3 passed</span>
-						<span><i class="fa fa-circle-o text-primary"></i> 100.00%</span>
+						<span class="flex text-muted">Out of which 0 passed</span>
+						<span><i class="fa fa-circle-o text-primary"></i> .00%</span>
 					</div>
 				</div>
 			</div>
@@ -124,7 +132,7 @@
 						<span class="">Start</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						Jan 20, 2022 06:49:42 PM
+						Feb 7, 2022 04:00:21 PM
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -138,7 +146,7 @@
 						<span class="">Time Taken</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						0h 4m 9s+133ms
+						0h 2m 8s+155ms
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -162,14 +170,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-danger"></i> &nbsp;Fail 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">0 passed, 1 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -187,14 +195,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-danger"></i> &nbsp;Fail 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">3 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">0 passed, 3 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -212,15 +220,15 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> 100%</div>
-										<div class="list-body"><span class="text-muted">Passed</span></div>
+										<div><i class="badge badge-xs badge-o b-danger"></i> 100%</div>
+										<div class="list-body"><span class="text-muted">Failed</span></div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">72 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">12 passed, 3 failed and 96 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -252,20 +260,20 @@
 						</tr>
 						<tr>
 							<td>@Grid</td>
-							<td>4</td>
 							<td>0</td>
+							<td>4</td>
 							<td>0</td>
 						</tr>
 						<tr>
 							<td>@Smoke</td>
-							<td>4</td>
 							<td>0</td>
+							<td>4</td>
 							<td>0</td>
 						</tr>
 						<tr>
 							<td>@Regression</td>
-							<td>4</td>
 							<td>0</td>
+							<td>4</td>
 							<td>0</td>
 						</tr>
 					</table>
@@ -291,7 +299,7 @@
 		                datasets: [{
 		                    borderColor: 'transparent',
 		                    data: [
-		                    	1, 0, 0, 0, 0, 0
+		                    	0, 1, 0, 0, 0, 0
 		                    ],
 		                    backgroundColor: [
 		                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -325,7 +333,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	3, 0, 0, 0, 0, 0
+			                    	0, 3, 0, 0, 0, 0
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -360,7 +368,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	72, 0, 0, 0, 0, 0
+			                    	12, 3, 0, 0, 0, 96
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -388,7 +396,7 @@
 		})();
 	})
     var timeline = {
-"logueo del aplicativo Tutask":248.937    };
+"logueo del aplicativo Tutask":127.854    };
     function getRandomColor() {
         var letters = '0123456789ABCDEF';
         var color = '#';
