--- a/test-output/LoggerReport/tag.html
+++ b/test-output/LoggerReport/tag.html
@@ -46,6 +46,14 @@
 							</a>
 						</li>
 						<li>
+							<a href="exception.html">
+							<span class="nav-icon">
+							<i class="fa fa-warning"></i>
+							</span>
+							<span class="nav-text">Exceptions</span>
+							</a>
+						</li>
+						<li>
 							<a href="dashboard.html">
 							<span class="nav-icon">
 							<i class="fa fa-dashboard"></i>
@@ -106,8 +114,8 @@
 							<div class="tc d-none">
 								<h5>@Grid</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">4 passed</span>
-									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">4 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
 								<table class="table">
@@ -121,10 +129,10 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="1" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="1" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">logueo del aplicativo Tutask </td>
-	<td>0h 4m 8s+937msc</td>
+	<td>0h 2m 7s+854msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		</span>
@@ -133,11 +141,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="3" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="3" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 2m 45s+815msc</td>
+	<td>0h 2m 7s+744msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -148,11 +160,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="28" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="41" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 0m 57s+59msc</td>
+	<td>0h 0m 0s+45msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -163,11 +179,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="53" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="79" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 0m 26s+56msc</td>
+	<td>0h 0m 0s+50msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -177,6 +197,10 @@
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
 </tr>
 									</tbody>
 								</table>
@@ -184,7 +208,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">4</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">4</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -197,8 +221,8 @@
 							<div class="tc d-none">
 								<h5>@Smoke</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">4 passed</span>
-									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">4 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
 								<table class="table">
@@ -212,10 +236,10 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">logueo del aplicativo Tutask</span></td>
-	<td>0h 4m 8s+937msc</td>
+	<td>0h 2m 7s+854msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Regression</span>
@@ -225,11 +249,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="3" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="3" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 2m 45s+815msc</td>
+	<td>0h 2m 7s+744msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -240,11 +268,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="28" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="41" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 0m 57s+59msc</td>
+	<td>0h 0m 0s+45msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -255,11 +287,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="53" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="79" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 0m 26s+56msc</td>
+	<td>0h 0m 0s+50msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -269,6 +305,10 @@
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
 </tr>
 									</tbody>
 								</table>
@@ -276,7 +316,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">4</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">4</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -289,8 +329,8 @@
 							<div class="tc d-none">
 								<h5>@Regression</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">4 passed</span>
-									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">4 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
 								<table class="table">
@@ -304,10 +344,10 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">logueo del aplicativo Tutask</span></td>
-	<td>0h 4m 8s+937msc</td>
+	<td>0h 2m 7s+854msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Regression</span>
@@ -317,11 +357,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="3" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="3" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 2m 45s+815msc</td>
+	<td>0h 2m 7s+744msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -332,11 +376,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="28" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="41" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 0m 57s+59msc</td>
+	<td>0h 0m 0s+45msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -347,11 +395,15 @@
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="53" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+<tr class="s-fail" test-id="79" parent-id="1">
+	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Al ingresar al link de Tutask debe completar los campos para loguearse <br/><span class="text-muted text-sm">Al ingresar al link de Tutask debe completar los campos para loguearse</span></td>
-	<td>0h 0m 26s+56msc</td>
+	<td>0h 0m 0s+50msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @Grid</span>
 		<span class="category badge"><i class="fa fa-tag"></i> @Smoke</span>
@@ -361,6 +413,10 @@
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
 </tr>
 									</tbody>
 								</table>
@@ -368,7 +424,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">4</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">4</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -399,7 +455,7 @@
 									        </a>
 								        </li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">Jan 20, 2022 06:49:42 PM</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">Feb 7, 2022 04:00:21 PM</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
